# C-_decision_tree

./: CMakeLists.txt  README.md  test2.cpp
data/: data_read.py  main.py  test_data.csv  train_data.csv
include/: CMakeLists.txt  VailAndTest.h  cart.h  config.h  tool.h
src/: CMakeLists.txt  VailAndTest.cpp  cart.cpp  main.cpp  tool.cpp
